docs: fix header github link style (#802)

--- a/src/css/customTheme.css
+++ b/src/css/customTheme.css
@@ -1,4 +1,4 @@
-@import 'https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css';
+@import "https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css";
 
 :root {
   --ifm-color-primary-lightest: #8ca4ed;
@@ -8,4 +8,10 @@
   --ifm-color-primary-dark: #2855dd;
   --ifm-color-primary-darker: #224ed5;
   --ifm-color-primary-darkest: #1c41af;
+}
+
+.header-github-link > span > svg {
+  display: inline;
+  vertical-align: unset;
+  position: static;
 }
